force-app/main/default/objects/Estimate_Request__c/fields/Edge_Trim_FF__c.field-meta.xml
<CustomField>
    <fullName>Edge_Trim_FF__c</fullName>
    <defaultValue>0.0625</defaultValue>
    <inlineHelpText>Enter the Edge Trim for Fanfold Items</inlineHelpText>
    <label>Edge Trim (FF)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>