force-app/main/default/objects/Estimate_Request__c/fields/Emboss__c.field-meta.xml
<CustomField>
    <fullName>Emboss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emboss</label>
    <type>Checkbox</type>
</CustomField>