force-app/main/default/objects/Estimate_Request__c/fields/Est_Need_by_date__c.field-meta.xml
<CustomField>
    <fullName>Est_Need_by_date__c</fullName>
    <label>Est Need by date</label>
    <type>DateTime</type>
</CustomField>