force-app/main/default/objects/Estimate_Request__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>New Estimate #</label>
    <type>AutoNumber</type>
</CustomField>