force-app/main/default/objects/Estimate_Request__c/fields/Estimate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Number__c</fullName>
    <inlineHelpText>Enter the Estimate Number from the estimating system</inlineHelpText>
    <label>Estimate Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>