force-app/main/default/objects/Estimate_Request__c/fields/Estimate_Type__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Type__c</fullName>
    <description>Type of Estimate</description>
    <inlineHelpText>Select the appropriate estimate type.</inlineHelpText>
    <label>Estimate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer - Existing Item</fullName>
            </value>
            <value>
                <fullName>Existing Customer - New Item</fullName>
                <default>true</default>
                <label>Existing Customer - New Item</label>
            </value>
            <value>
                <fullName>New Customer - New Item</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>