force-app/main/default/objects/Estimate_Request__c/fields/Estimated_Artwork_Charges__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Artwork_Charges__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the total $ amount for Artwork Charges</inlineHelpText>
    <label>Estimated Artwork Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>