force-app/main/default/objects/Estimate_Request__c/fields/Estimated_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Due_Date__c</fullName>
    <label>Estimated Due Date</label>
    <type>Date</type>
</CustomField>