force-app/main/default/objects/Estimate_Request__c/fields/Estimating_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Estimating_Assumptions__c</fullName>
    <label>Estimating Assumptions</label>
    <type>TextArea</type>
</CustomField>