force-app/main/default/objects/Estimate_Request__c/fields/Estimating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Estimating_Notes__c</fullName>
    <label>Estimating Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>