force-app/main/default/objects/Estimate_Request__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Estimator</description>
    <inlineHelpText>Select the Estimator to work this request.</inlineHelpText>
    <label>Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Estimate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>