force-app/main/default/objects/Estimate_Request__c/fields/Face_Roll_Wind__c.field-meta.xml
<CustomField>
    <fullName>Face_Roll_Wind__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <label>Face Roll Wind</label>
    <length>5</length>
    <type>Text</type>
</CustomField>