force-app/main/default/objects/Estimate_Request__c/fields/Film_Base__c.field-meta.xml
<CustomField>
    <fullName>Film_Base__c</fullName>
    <label>Film Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White Vinyl</fullName>
            </value>
            <value>
                <fullName>Clear Vinyl</fullName>
            </value>
            <value>
                <fullName>Yellow Vinyl</fullName>
            </value>
            <value>
                <fullName>White Static Vinyl</fullName>
            </value>
            <value>
                <fullName>Clear Static Vinyl</fullName>
            </value>
            <value>
                <fullName>White Vinyl High Tack</fullName>
            </value>
            <value>
                <fullName>Clear Vinyl High Tack</fullName>
            </value>
            <value>
                <fullName>White Polypropylene</fullName>
            </value>
            <value>
                <fullName>Clear Polypropylene</fullName>
            </value>
            <value>
                <fullName>White Polypropylene Removable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>