force-app/main/default/objects/Estimate_Request__c/fields/Finished_Size__c.field-meta.xml
<CustomField>
    <fullName>Finished_Size__c</fullName>
    <label>Finished Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>