force-app/main/default/objects/Estimate_Request__c/fields/Finishing_Pack__c.field-meta.xml
<CustomField>
    <fullName>Finishing_Pack__c</fullName>
    <label>Finishing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Glued</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>Security Tag</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Peel &amp; Seal</fullName>
            </value>
            <value>
                <fullName>Re-moist</fullName>
            </value>
            <value>
                <fullName>Zip Strip Application</fullName>
            </value>
            <value>
                <fullName>Nylon Strip Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>