force-app/main/default/objects/Estimate_Request__c/fields/Finishing_Shrink__c.field-meta.xml
<CustomField>
    <fullName>Finishing_Shrink__c</fullName>
    <label>Finishing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>500 MTR Rolls</fullName>
            </value>
            <value>
                <fullName>750 MTR Rolls</fullName>
            </value>
            <value>
                <fullName>900 MTR Rolls</fullName>
            </value>
            <value>
                <fullName>1000 MTR Rolls</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>