force-app/main/default/objects/Estimate_Request__c/fields/Flat_Size__c.field-meta.xml
<CustomField>
    <fullName>Flat_Size__c</fullName>
    <label>Flat Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>