force-app/main/default/objects/Estimate_Request__c/fields/FOB_Point__c.field-meta.xml
<CustomField>
    <fullName>FOB_Point__c</fullName>
    <inlineHelpText>Please enter the FOB Point.
FOB Origin - Ownership title transfers when product is shipped 
FOB Destination - Ownership title transfers when delivered</inlineHelpText>
    <label>FOB Point</label>
    <length>125</length>
    <type>Text</type>
</CustomField>