force-app/main/default/objects/Estimate_Request__c/fields/Foil_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Foil_Stamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foil Stamp</label>
    <type>Checkbox</type>
</CustomField>