force-app/main/default/objects/Estimate_Request__c/fields/Freight_additional_to__c.field-meta.xml
<CustomField>
    <fullName>Freight_additional_to__c</fullName>
    <label>Freight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>Local Delivery included</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>FOB Plant</fullName>
            </value>
            <value>
                <fullName>FOB Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>