force-app/main/default/objects/Estimate_Request__c/fields/Freight_Cost_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost_Per_Case__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the freight cost per case</inlineHelpText>
    <label>Freight Cost Per Case</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>