force-app/main/default/objects/Estimate_Request__c/fields/Freight_included__c.field-meta.xml
<CustomField>
    <fullName>Freight_included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight included?</label>
    <type>Checkbox</type>
</CustomField>