force-app/main/default/objects/Estimate_Request__c/fields/Freight_Inv_1__c.field-meta.xml
<CustomField>
    <fullName>Freight_Inv_1__c</fullName>
    <label>Freight Inv 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>