force-app/main/default/objects/Estimate_Request__c/fields/Freight_Inv_2_Price__c.field-meta.xml
<CustomField>
    <fullName>Freight_Inv_2_Price__c</fullName>
    <label>Freight Inv 2 Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>