force-app/main/default/objects/Estimate_Request__c/fields/Freight_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Freight_Percentage__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the Freight Percentage to use to calculate total price</inlineHelpText>
    <label>Freight Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>