force-app/main/default/objects/Estimate_Request__c/fields/Freight_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Freight_Pricing__c</fullName>
    <label>Freight Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB Plant</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>