force-app/main/default/objects/Estimate_Request__c/fields/Freight_Total__c.field-meta.xml
<CustomField>
    <fullName>Freight_Total__c</fullName>
    <formula>Freight_Inv_1_Price__c +  Freight_Inv_2_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>