force-app/main/default/objects/Estimate_Request__c/fields/Frieght_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Frieght_Pricing__c</fullName>
    <inlineHelpText>Select the appropriate freight pricing method.</inlineHelpText>
    <label>Freight Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FOB Plant</fullName>
                <default>true</default>
                <label>FOB Plant</label>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>