force-app/main/default/objects/Estimate_Request__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <label>Pre Press Furnished</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic file with all elements in place, CG to rip and trap</fullName>
            </value>
            <value>
                <fullName>Cenveo to rip and trap</fullName>
            </value>
            <value>
                <fullName>Hi Resolution PDF ready to Print</fullName>
            </value>
            <value>
                <fullName>Standing files for Exact reprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>