force-app/main/default/objects/Estimate_Request__c/fields/Gap_Between_Labels__c.field-meta.xml
<CustomField>
    <fullName>Gap_Between_Labels__c</fullName>
    <defaultValue>0.1250</defaultValue>
    <inlineHelpText>Distance between labels in inches (standard is 1/8, or .125)</inlineHelpText>
    <label>Gap Between Labels</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>