force-app/main/default/objects/Estimate_Request__c/fields/If_yes_per_stack__c.field-meta.xml
<CustomField>
    <fullName>If_yes_per_stack__c</fullName>
    <label>If yes, # per stack</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>