force-app/main/default/objects/Estimate_Request__c/fields/Imprint_Colors__c.field-meta.xml
<CustomField>
    <fullName>Imprint_Colors__c</fullName>
    <description>Promo Imprint Colors</description>
    <label>Imprint Colors</label>
    <type>TextArea</type>
</CustomField>