force-app/main/default/objects/Estimate_Request__c/fields/Imprint_Options__c.field-meta.xml
<CustomField>
    <fullName>Imprint_Options__c</fullName>
    <label>Imprint Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emboss</fullName>
            </value>
            <value>
                <fullName>Deboss</fullName>
            </value>
            <value>
                <fullName>Laser Engraved</fullName>
            </value>
            <value>
                <fullName>Screen Printed</fullName>
            </value>
            <value>
                <fullName>Pad Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>