force-app/main/default/objects/Estimate_Request__c/fields/In_Hands_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Hands_Date__c</fullName>
    <description>Promo in hands date</description>
    <label>In Hands Date</label>
    <type>Date</type>
</CustomField>