force-app/main/default/objects/Estimate_Request__c/fields/In_Home__c.field-meta.xml
<CustomField>
    <fullName>In_Home__c</fullName>
    <label>In  Home</label>
    <type>Date</type>
</CustomField>