force-app/main/default/objects/Estimate_Request__c/fields/Ink_2__c.field-meta.xml
<CustomField>
    <fullName>Ink_2__c</fullName>
    <label>Spot Color 2</label>
    <length>160</length>
    <type>Text</type>
</CustomField>