force-app/main/default/objects/Estimate_Request__c/fields/Ink_3__c.field-meta.xml
<CustomField>
    <fullName>Ink_3__c</fullName>
    <label>Spot Color 3</label>
    <length>160</length>
    <type>Text</type>
</CustomField>