force-app/main/default/objects/Estimate_Request__c/fields/Ink_4__c.field-meta.xml
<CustomField>
    <fullName>Ink_4__c</fullName>
    <label>Spot Color 4</label>
    <length>160</length>
    <type>Text</type>
</CustomField>