force-app/main/default/objects/Estimate_Request__c/fields/Ink__c.field-meta.xml
<CustomField>
    <fullName>Ink__c</fullName>
    <label>Spot Color 1</label>
    <length>160</length>
    <type>Text</type>
</CustomField>