force-app/main/default/objects/Estimate_Request__c/fields/Ink_Comments__c.field-meta.xml
<CustomField>
    <fullName>Ink_Comments__c</fullName>
    <label>Ink Comments</label>
    <length>25</length>
    <type>Text</type>
</CustomField>