force-app/main/default/objects/Estimate_Request__c/fields/Ink_Type__c.field-meta.xml
<CustomField>
    <fullName>Ink_Type__c</fullName>
    <label>Ink Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>CMYK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>