force-app/main/default/objects/Estimate_Request__c/fields/Inside_Print__c.field-meta.xml
<CustomField>
    <fullName>Inside_Print__c</fullName>
    <label>Inside Print</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - 1 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 2 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 3 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 4 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 5 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 6 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 7 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 8 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 9 Color</fullName>
            </value>
            <value>
                <fullName>Yes - 10 Color</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>