force-app/main/default/objects/Estimate_Request__c/fields/Inside_Print_Coating_Type__c.field-meta.xml
<CustomField>
    <fullName>Inside_Print_Coating_Type__c</fullName>
    <label>Inside Print - Coating Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>