force-app/main/default/objects/Estimate_Request__c/fields/Inside_Print_Ink_Type__c.field-meta.xml
<CustomField>
    <fullName>Inside_Print_Ink_Type__c</fullName>
    <label>Inside Print - Ink Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>UV</fullName>
            </value>
            <value>
                <fullName>Metallic</fullName>
            </value>
            <value>
                <fullName>LMQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>