force-app/main/default/objects/Estimate_Request__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <inlineHelpText>Enter any additional internal comments for the Estimators</inlineHelpText>
    <label>Internal Comments</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>