force-app/main/default/objects/Estimate_Request__c/fields/Internal_Perforations__c.field-meta.xml
<CustomField>
    <fullName>Internal_Perforations__c</fullName>
    <label>Internal Perforations</label>
    <length>18</length>
    <type>Text</type>
</CustomField>