force-app/main/default/objects/Estimate_Request__c/fields/Inv_1_Price__c.field-meta.xml
<CustomField>
    <fullName>Inv_1_Price__c</fullName>
    <label>Inv 1 Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>