force-app/main/default/objects/Estimate_Request__c/fields/Inv_2_Price__c.field-meta.xml
<CustomField>
    <fullName>Inv_2_Price__c</fullName>
    <label>Inv 2 Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>