force-app/main/default/objects/Estimate_Request__c/fields/Inv_Desc_3__c.field-meta.xml
<CustomField>
    <fullName>Inv_Desc_3__c</fullName>
    <label>Inv Desc 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>