force-app/main/default/objects/Estimate_Request__c/fields/INV_Order_QTY__c.field-meta.xml
<CustomField>
    <fullName>INV_Order_QTY__c</fullName>
    <formula>IF( Order_QTY_1__c  = TRUE, Qty_1__c , IF( Order_QTY_2__c  = TRUE, Qty_2__c, IF( Order_QTY_3__c  = TRUE, Qty_3__c, IF( Order_QTY_4__c  = TRUE, Qty_4__c, IF( Order_QTY_5__c  = TRUE, Qty_5__c, NULL )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INV Order QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>