force-app/main/default/objects/Estimate_Request__c/fields/INV_Order_Sell__c.field-meta.xml
<CustomField>
    <fullName>INV_Order_Sell__c</fullName>
    <formula>IF( Order_QTY_1__c = TRUE, CP_Sell_Price_QTY_1__c, IF( Order_QTY_2__c = TRUE, CP_Sell_Price_QTY_2__c , IF( Order_QTY_3__c = TRUE, CP_Sell_Price_QTY_3__c, IF( Order_QTY_4__c = TRUE, CP_Sell_Price_QTY_4__c, IF( Order_QTY_5__c = TRUE, CP_Sell_Price_QTY_5__c, NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INV Order Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>