force-app/main/default/objects/Estimate_Request__c/fields/Item_Colors__c.field-meta.xml
<CustomField>
    <fullName>Item_Colors__c</fullName>
    <description>Promo Colors</description>
    <label>Item Colors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>