force-app/main/default/objects/Estimate_Request__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Number of Item</description>
    <inlineHelpText>Enter the Item to be estimated.</inlineHelpText>
    <label>Item Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>