force-app/main/default/objects/Estimate_Request__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <label>Job Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>