force-app/main/default/objects/Estimate_Request__c/fields/Job_Paper_Certification__c.field-meta.xml
<CustomField>
    <fullName>Job_Paper_Certification__c</fullName>
    <label>Job/Paper Certification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None/Blank</fullName>
                <default>true</default>
                <label>None/Blank</label>
            </value>
            <value>
                <fullName>FSC</fullName>
            </value>
            <value>
                <fullName>SFI</fullName>
            </value>
            <value>
                <fullName>SGP</fullName>
            </value>
            <value>
                <fullName>PEFC</fullName>
            </value>
            <value>
                <fullName>PEFC &amp; SFI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>