force-app/main/default/objects/Estimate_Request__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Exact Rerun</fullName>
            </value>
            <value>
                <fullName>Rerun with Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>