force-app/main/default/objects/Estimate_Request__c/fields/Label_Category__c.field-meta.xml
<CustomField>
    <fullName>Label_Category__c</fullName>
    <label>Label Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TE Band</fullName>
            </value>
            <value>
                <fullName>Body Label</fullName>
            </value>
            <value>
                <fullName>Promo Combo Pk.</fullName>
            </value>
            <value>
                <fullName>Roll-N-Shrink</fullName>
            </value>
            <value>
                <fullName>Body w/TE</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Tubing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>