force-app/main/default/objects/Estimate_Request__c/fields/Label_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Label_Product_Type__c</fullName>
    <label>Label Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cut Sheet</fullName>
            </value>
            <value>
                <fullName>Direct Thermal</fullName>
            </value>
            <value>
                <fullName>Dual Web</fullName>
            </value>
            <value>
                <fullName>EDP</fullName>
            </value>
            <value>
                <fullName>Mylar</fullName>
            </value>
            <value>
                <fullName>Poly Stock</fullName>
            </value>
            <value>
                <fullName>RFID</fullName>
            </value>
            <value>
                <fullName>Semi Gloss</fullName>
            </value>
            <value>
                <fullName>Thermal Transfer</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>