force-app/main/default/objects/Estimate_Request__c/fields/Label_Roll_Footage__c.field-meta.xml
<CustomField>
    <fullName>Label_Roll_Footage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Label Roll Footage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>