force-app/main/default/objects/Estimate_Request__c/fields/Label_Shape__c.field-meta.xml
<CustomField>
    <fullName>Label_Shape__c</fullName>
    <inlineHelpText>Select Shape Type</inlineHelpText>
    <label>Label Shape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Square Corner Rectangle/Square</fullName>
            </value>
            <value>
                <fullName>Round Corner Rectangle/Square</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
            <value>
                <fullName>Oval</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>