force-app/main/default/objects/Estimate_Request__c/fields/Label_Type__c.field-meta.xml
<CustomField>
    <fullName>Label_Type__c</fullName>
    <label>Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Fanfold</fullName>
            </value>
            <value>
                <fullName>Sheeted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>