force-app/main/default/objects/Estimate_Request__c/fields/LabelProdtype__c.field-meta.xml
<CustomField>
    <fullName>LabelProdtype__c</fullName>
    <label>Product Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>