force-app/main/default/objects/Estimate_Request__c/fields/Labels_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Labels_Per_Case__c</fullName>
    <formula>Labels_Per_Roll_Fold__c  *  Rolls_Stacks_Per_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labels Per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>