force-app/main/default/objects/Estimate_Request__c/fields/Labels_Per_Fold__c.field-meta.xml
<CustomField>
    <fullName>Labels_Per_Fold__c</fullName>
    <inlineHelpText>Fanfold Product - Enter the number of Labels Per Fold</inlineHelpText>
    <label>Labels Per Fold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>