force-app/main/default/objects/Estimate_Request__c/fields/Labels_Per_Roll_Stack__c.field-meta.xml
<CustomField>
    <fullName>Labels_Per_Roll_Stack__c</fullName>
    <label>Labels Per Roll/Stack</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>