force-app/main/default/objects/Estimate_Request__c/fields/Lamination__c.field-meta.xml
<CustomField>
    <fullName>Lamination__c</fullName>
    <label>Lamination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shiny</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Soft Touch</fullName>
            </value>
            <value>
                <fullName>Textured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>