force-app/main/default/objects/Estimate_Request__c/fields/Lay_Flat__c.field-meta.xml
<CustomField>
    <fullName>Lay_Flat__c</fullName>
    <label>Lay Flat</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>