force-app/main/default/objects/Estimate_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>