force-app/main/default/objects/Estimate_Request__c/fields/Lead_Time_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_in_Days__c</fullName>
    <defaultValue>15</defaultValue>
    <inlineHelpText>Enter the number of days for the expected lead time for product to be manufactured</inlineHelpText>
    <label>Lead Time (in Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>